Added Initial Warmup Code

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Descriptions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -203,6 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Print times based on duration \n",
     "durations = []\n",
     "for index, row in df.iterrows():\n",
     "    start = dt.strptime((row[\"started_at\"]), \"%Y-%m-%d %H:%M:%S\")\n",
@@ -214,11 +222,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Filter for duration \n",
     "df['duration'] = durations\n",
     "durations_df=df[df['duration']<=180]\n",
     "durations_df = durations_df[durations_df['duration']>=0]"
@@ -253,10 +269,18 @@
     }
    ],
    "source": [
+    "#Plots the data \n",
     "pl.hist(durations_df['duration'], bins=20)\n",
     "pl.xlabel(\"Trip Duration\")\n",
     "pl.ylabel(\"Frequency\")\n",
     "pl.title(\"Trip Duration vs. Frequency\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
    ]
   },
   {
@@ -297,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +335,13 @@
    "source": [
     "prob= len(durations_df[durations_df['duration']>20])/len(durations_df['duration'])\n",
     "print(\"The probability that the duration of the trip is greater than 20 minutes is \", prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3"
    ]
   },
   {
@@ -330,6 +361,13 @@
     "member= durations_df[durations_df['member_casual']=='member']\n",
     "prob_member= len(member[member['duration']>20])/len(member)\n",
     "print(\"The probability that the duration of the trip is greater than 20 minutes given that the rider is a member is \", prob_member)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4"
    ]
   },
   {
@@ -354,6 +392,109 @@
     "prob_25= len(durations_df[durations_df['duration']>25])/len(durations_df['duration'])\n",
     "prob_member_given_ride_greater25= (prob_25_member*prob_member)/prob_25\n",
     "prob_member_given_ride_greater25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected ride duration is  18.378049011202773 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Expected Value of Electric Bike\n",
+    "classic = df.groupby(df['rideable_type']).get_group('electric_bike')\n",
+    "mean_duration= classic['duration'].mean()\n",
+    "print(\"Expected ride duration is \", mean_duration, \"minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected ride duration is  17.406528374412954 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Expected Value of Classic Bike \n",
+    "electric = df.groupby(df['rideable_type']).get_group('classic_bike')\n",
+    "\n",
+    "mean_duration= electric['duration'].mean()\n",
+    "print(\"Expected ride duration is \", mean_duration, \"minutes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7701967556006271"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_10_ebike= len(electric[electric['duration']<10])/len(electric)\n",
+    "prob_ebike= len(electric)/len(durations_df)\n",
+    "prob_10= len(durations_df[durations_df['duration']<10])/len(durations_df['duration'])\n",
+    "prob_ebike_less_10= (prob_10_ebike*prob_member)/prob_10\n",
+    "prob_ebike_less_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7493888466596276"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_10_classic= len(classic[classic['duration']<10])/len(classic)\n",
+    "prob_classic= len(classic)/len(durations_df)\n",
+    "prob_10= len(durations_df[durations_df['duration']<10])/len(durations_df['duration'])\n",
+    "prob_classic_less_10= (prob_10_classic*prob_member)/prob_10\n",
+    "prob_classic_less_10"
    ]
   },
   {
